--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,20 @@
 ---
+import { getCollection } from "astro:content";
+import PageLayout from "../layouts/PageLayout.astro";
+import PostEntry from "../components/PostEntry.astro";
 
+const posts = await getCollection("posts");
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
-  </head>
-  <body>
-    <h1>Astro</h1>
-  </body>
-</html>
+<PageLayout title="Hi! I'm uku">
+  <p>i code</p>
+
+  <h2>Posts</h2>
+  <ul>
+    {
+      posts
+        .sort((a, b) => b.data.date.getTime() - a.data.date.getTime())
+        .map((post) => <PostEntry {...post} />)
+    }
+  </ul>
+</PageLayout>
