--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,10 +1,15 @@
 ---
-
+import { Image } from "astro:assets";
 ---
 
 <nav>
   <div class="container">
-    <img src="https://mc-heads.net/avatar/uku3lig/32" />
+    <Image
+      src="https://mc-heads.net/avatar/uku3lig/32"
+      width="32"
+      height="32"
+      alt="uku3lig"
+    />
     <a href="/">home</a>
   </div>
 </nav>
