--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -10,6 +10,7 @@ import { Image } from "astro:assets";
       height="32"
       alt="uku3lig"
     />
+    <a href="/posts">posts</a>
     <a href="/">home</a>
   </div>
 </nav>
