--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -25,7 +25,7 @@ const { title, description } = Astro.props;
     <header>
       <div class="container">
         <h1>{title}</h1>
-        {description && <p>{description}</p>}
+        {description && <i>{description}</i>}
       </div>
     </header>
 
