feat: add tags to posts

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -9,9 +9,10 @@ import { Image } from "astro:assets";
       width="32"
       height="32"
       alt="uku3lig"
+      loading="eager"
     />
-    <a href="/posts">posts</a>
     <a href="/">home</a>
+    <a href="/posts">posts</a>
   </div>
 </nav>
 
@@ -27,7 +28,7 @@ import { Image } from "astro:assets";
     block-size: 3rem;
     align-items: center;
     position: relative;
-    gap: 8px;
+    gap: 12px;
   }
 
   .container > *:first-child {
