--- a/src/pages/tag/[slug].astro
+++ b/src/pages/tag/[slug].astro
@@ -30,3 +30,10 @@ const { entries } = Astro.props;
     }
   </ul>
 </PageLayout>
+
+<style>
+  ul {
+    min-inline-size: min(90vw, 70ch);
+    padding-inline-start: 0;
+  }
+</style>
