--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -15,3 +15,10 @@ const posts = await getCollection("posts");
     }
   </ul>
 </PageLayout>
+
+<style>
+  ul {
+    min-inline-size: min(90vw, 70ch);
+    padding-inline-start: 0;
+  }
+</style>
