--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,10 +6,10 @@
   <div class="container">
     <ul>
       <li>
-        <a href="mailto:hi@uku.moe">Contact</a>
+        <a href="https://github.com/uku3lig/website">source</a>
       </li>
       <li>
-        <a href="https://github.com/uku3lig">GitHub</a>
+        <a href="/rss.xml">rss</a>
       </li>
     </ul>
     <p>
