--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const { Content } = await about.render();
 const posts = await getCollection("posts");
 ---
 
-<PageLayout title="Hi! I'm uku">
+<PageLayout title="uku's website">
   <Content />
 
   <ul>
