--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -4,7 +4,7 @@ import "../styles/global.css";
 import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <html lang="en">
@@ -21,11 +21,11 @@ const { title } = Astro.props;
       content="https://avatars.githubusercontent.com/u/61147779?v=4"
     />
     <meta name="og:url" content={Astro.url} />
+    <meta name="og:description" content={description || "uku's website"} />
+    <meta name="theme-color" content="#c6a0f6" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="sitemap" href="/sitemap-index.xml" />
-
-    <slot name="head" />
 
     <title>{title}</title>
   </head>
