fix: change favicon and fix descriptions

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -4,13 +4,16 @@ import { Image } from "astro:assets";
 
 <nav>
   <div class="container">
-    <Image
-      src="https://mc-heads.net/avatar/uku3lig/48"
-      width="32"
-      height="32"
-      alt="uku3lig"
-      loading="eager"
-    />
+    <a href="/">
+      <Image
+        src="https://mc-heads.net/avatar/uku3lig/48"
+        width="32"
+        height="32"
+        alt="uku3lig"
+        loading="eager"
+      />
+    </a>
+
     <a href="/">home</a>
     <a href="/posts">posts</a>
   </div>
