--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -4,13 +4,13 @@ import "../styles/global.css";
 import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
 
-const { title, description } = Astro.props;
+const { title, description = "one of the websites of all time" } = Astro.props;
 ---
 
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="description" content="uku's website" />
+    <meta name="description" content={description} />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
 
@@ -21,10 +21,14 @@ const { title, description } = Astro.props;
       content="https://avatars.githubusercontent.com/u/61147779?v=4"
     />
     <meta name="og:url" content={Astro.url} />
-    <meta name="og:description" content={description || "uku's website"} />
+    <meta name="og:description" content={description} />
     <meta name="theme-color" content="#c6a0f6" />
 
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://mc-heads.net/avatar/uku3lig/32"
+    />
     <link rel="sitemap" href="/sitemap-index.xml" />
 
     <title>{title}</title>
