fix: add spacing between post entries

--- a/src/components/PostEntry.astro
+++ b/src/components/PostEntry.astro
@@ -29,6 +29,8 @@ const dateIso = date.toISOString().split("T")[0];
   .post-entry {
     display: flex;
     flex-direction: column;
+    padding-block-end: 4px;
+    margin-block-end: 1rem;
   }
 
   .title {
