feat: add discord join page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,6 +12,7 @@ const posts = await getCollection("posts");
 const links = {
   github: "https://github.com/uku3lig",
   modrinth: "https://modrinth.com/user/uku",
+  discord: "/discord",
   twitter: "https://twitter.com/uku3lig",
   youtube: "https://youtube.com/@uku3lig",
   twitch: "https://twitch.tv/uku3lig",
