fix: make images scale correctly

--- a/src/layouts/ArticleLayout.astro
+++ b/src/layouts/ArticleLayout.astro
@@ -16,7 +16,9 @@ const dateISO = date.toISOString().split("T")[0];
     </span>
   </Fragment>
 
-  <slot />
+  <article>
+    <slot />
+  </article>
 </PageLayout>
 
 <style>
