fix: make email an image

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const links = {
       <a href="https://matrix.to/#/@uku:m.uku.moe">@uku:m.uku.moe</a> on matrix
     </li>
     <li>
-      <a href="mailto:hi@uku.moe">hi@uku.moe</a> via email
+      <img class="email" src="/email.png" alt="email" /> via email
     </li>
   </ul>
 
@@ -77,5 +77,10 @@ const links = {
     content: "#";
     color: var(--accent-color);
     margin-right: 0.25rem;
+  }
+
+  .email {
+    vertical-align: middle;
+    height: 24px;
   }
 </style>
