feat: add direct link to discord server

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,6 +31,9 @@ const links = {
     <li>
       <img class="email" src="/email.png" alt="email" /> via email
     </li>
+    <li>
+      via my <a href="/discord">discord server</a>
+    </li>
   </ul>
 
   <h2>Useful links</h2>
