--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,8 @@ const links = {
       <a href={links["matrix"]}>@uku:m.uku.moe</a> on matrix
     </li>
     <li>
-      <img class="email" src="/email.png" alt="email" /> via email
+      <img class="email" src="/email.png" alt="email" width="100" height="24" />
+      via email
     </li>
     <li>
       via my <a href={links["discord"]}>discord server</a>
@@ -87,6 +88,5 @@ const links = {
 
   .email {
     vertical-align: middle;
-    height: 24px;
   }
 </style>
