--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,9 +6,9 @@
   --font-sans: "Inter", sans-serif;
   --font-mono: "Iosevka", monospace;
 
-  --background-color: #f8f9fa;
-  --secondary-bg: #dedede;
-  --tertiary-bg: #d9d9d9;
+  --background-color: white;
+  --secondary-bg: #f0f0f0;
+  --tertiary-bg: #cecece;
   --text-color: black;
   --accent-color: #41adff;
   color-scheme: light;
@@ -22,6 +22,12 @@
     --text-color: #f8f9fa;
     --accent-color: #a5d8ff;
     color-scheme: dark;
+  }
+
+  .astro-code,
+  .astro-code span {
+    color: var(--shiki-dark) !important;
+    background-color: var(--shiki-dark-bg) !important;
   }
 }
 
