--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,8 @@
 ---
-import { getCollection, getEntry } from "astro:content";
+import { getCollection } from "astro:content";
 import PageLayout from "../layouts/PageLayout.astro";
 import PostEntry from "../components/PostEntry.astro";
 import { Icon } from "astro-icon/components";
-
-const about = await getEntry("about", "about");
-const { Content } = await about.render();
 
 const posts = await getCollection("posts");
 
@@ -23,7 +20,20 @@ const links = {
 ---
 
 <PageLayout title="uku's website">
-  <Content />
+  <p>
+    hi! i'm uku, a 18 year old engineering student who loves to mod games
+    (especially Minecraft) and tinker around in my free time.
+  </p>
+
+  <p>
+    i don't do much stuff outside of coding and playing videogames, so check out
+    the links below if you're interested in either of those things!
+  </p>
+
+  <p>
+    i sometimes (rarely) write <a href="/posts">blog posts</a> about stuff i find
+    interesting (or not)!
+  </p>
 
   <h2>Contact me</h2>
 
