--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -4,7 +4,7 @@ import "../styles/global.css";
 import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
 
-const { title, description = "one of the websites of all time" } = Astro.props;
+const { title, description = "welcome to my website!" } = Astro.props;
 ---
 
 <html lang="en">
