--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,8 +21,8 @@ const links = {
 
 <PageLayout title="uku's website">
   <p>
-    hi! i'm uku, a 18 year old engineering student who loves to mod games
-    (especially Minecraft) and tinker around in my free time.
+    hi! i'm uku, an 18 year old student (currently doing an apprenticeship) who
+    loves to mod games (especially Minecraft) and tinker around in my free time.
   </p>
 
   <p>
