feat(index): add last.fm link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ const links = {
   github: "https://github.com/uku3lig",
   forgejo: "https://git.uku3lig.net",
   modrinth: "https://modrinth.com/user/uku",
+  lastfm: "https://www.last.fm/user/ukute",
   maven: "https://maven.uku3lig.net",
   discord: "/discord",
   matrix: "https://matrix.to/#/@uku:m.uku.moe",
