--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import { getCollection } from "astro:content";
+import { Icon } from "astro-icon/components";
 import PageLayout from "../layouts/PageLayout.astro";
 import PostEntry from "../components/PostEntry.astro";
-import { Icon } from "astro-icon/components";
 
 const posts = await getCollection("posts");
 
@@ -10,8 +10,8 @@ const links = {
   github: "https://github.com/uku3lig",
   forgejo: "https://git.uku3lig.net",
   modrinth: "https://modrinth.com/user/uku",
-  lastfm: "https://www.last.fm/user/ukute",
-  maven: "https://maven.uku3lig.net",
+  lastdotfm: "https://www.last.fm/user/ukute",
+  apachemaven: "https://maven.uku3lig.net",
   discord: "/discord",
   matrix: "https://matrix.to/#/@uku:m.uku.moe",
   twitter: "https://twitter.com/uku3lig",
@@ -57,7 +57,12 @@ const links = {
     {
       Object.entries(links).map(([name, url]) => (
         <a href={url}>
-          <Icon {name} width={32} height={32} aria-label={name} />
+          <Icon
+            name={`simple-icons:${name}`}
+            width={32}
+            height={32}
+            aria-label={name}
+          />
         </a>
       ))
     }
