--- a/src/components/PostEntry.astro
+++ b/src/components/PostEntry.astro
@@ -1,6 +1,18 @@
 ---
 import readingTime from "reading-time";
 
+interface Props {
+  slug: string;
+  data: {
+    title: string;
+    description: string;
+    date: Date;
+    tags: string[];
+  };
+  body: string;
+  showDesc?: boolean;
+}
+
 const {
   slug,
   data: { title, description, date, tags },
