feat(footer): add astro version

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,9 +14,8 @@
     </ul>
     <p>
       <small>
-        Inspired by <a href="https://aurora.thilohohlt.com/">
-          Astro aurora theme
-        </a>
+        Built with <a href="https://astro.build">{Astro.generator}</a>, Inspired
+        by <a href="https://aurora.thilohohlt.com/">Astro aurora theme</a>
       </small>
     </p>
   </div>
