--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -4,6 +4,11 @@ import "../styles/global.css";
 import Navigation from "../components/Navigation.astro";
 import Footer from "../components/Footer.astro";
 
+interface Props {
+  title: string;
+  description?: string;
+}
+
 const { title, description = "welcome to my website!" } = Astro.props;
 ---
 
