feat: replace twitter with bluesky

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const links = {
   apachemaven: "https://maven.uku3lig.net",
   discord: "/discord",
   matrix: "https://matrix.to/#/@uku:m.uku.moe",
-  twitter: "https://twitter.com/uku3lig",
+  bluesky: "https://bsky.app/profile/uku.moe",
   youtube: "https://youtube.com/@uku3lig",
   twitch: "https://twitch.tv/uku3lig",
 };
