feat: add some more links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,10 @@ const links = {
   bluesky: "https://bsky.app/profile/uku.moe",
   youtube: "https://youtube.com/@uku3lig",
   twitch: "https://twitch.tv/uku3lig",
+  bandcamp: "https://bandcamp.com/uku3lig",
+  osu: "https://osu.ppy.sh/users/14815456",
+  namemc: "https://namemc.com/profile/uku3lig.1",
+  steam: "https://steamcommunity.com/id/uku3lig",
 };
 ---
 
