fix: add title for icon links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -66,6 +66,7 @@ const links = {
             width={32}
             height={32}
             aria-label={name}
+            title={name}
           />
         </a>
       ))
