--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ const links = {
 
 <PageLayout title="uku's website">
   <p>
-    hi! i'm uku, an 18 year old student (currently doing an apprenticeship) who
+    hi! i'm uku, a 19 year old student (currently doing an apprenticeship) who
     loves to mod games (especially Minecraft) and tinker around in my free time.
   </p>
 
