--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -16,6 +16,7 @@ import { Image } from "astro:assets";
 
     <a href="/">home</a>
     <a href="/posts">posts</a>
+    <a href="/projects">projects</a>
   </div>
 </nav>
 
