fix(navbar): set link bg color on hover

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -47,6 +47,11 @@ import { Image } from "astro:assets";
     text-decoration: none;
   }
 
+  a:hover {
+    background-color: var(--tertiary-bg);
+    text-decoration: underline;
+  }
+
   img {
     display: block;
     vertical-align: middle;
