fix: make PostEntry sized correctly

--- a/src/components/PostEntry.astro
+++ b/src/components/PostEntry.astro
@@ -43,6 +43,7 @@ const dateIso = date.toISOString().split("T")[0];
     flex-direction: column;
     padding-block-end: 4px;
     margin-block-end: 1rem;
+    width: fit-content;
   }
 
   .title {
