fix(index): update matrix server

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ const links = {
   lastdotfm: "https://www.last.fm/user/ukute",
   apachemaven: "https://maven.uku3lig.net",
   discord: "/discord",
-  matrix: "https://matrix.to/#/@uku:m.uku.moe",
+  matrix: "https://matrix.to/#/@uku:rei.uku.moe",
   bluesky: "https://bsky.app/profile/uku.moe",
   youtube: "https://youtube.com/@uku3lig",
   twitch: "https://twitch.tv/uku3lig",
@@ -45,7 +45,7 @@ const links = {
 
   <ul>
     <li>
-      <a href={links["matrix"]}>@uku:m.uku.moe</a> on matrix
+      <a href={links["matrix"]}>@uku:rei.uku.moe</a> on matrix
     </li>
     <li>
       <img class="email" src="/email.png" alt="email" width="100" height="24" />
